[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "LLMos"
version = "0.0.1"
authors = [
  { name="Mark Watson", email="markw@markwatson.com" },
]
description = "LLM OS Experiments"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/mark-watson/LLM-OS"
"Bug Tracker" = "https://github.com/mark-watson/LLM-OS/issues"